# rtx_opr

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cc.py  compile_shaders.ps1  compile_shaders.sh  err
assets/models/dog/: dog.mtl
cubetracer/: Cargo.toml
cubetracer/shaders/: anyhit.rahit  anyhit.rahit.spv  block_data.comp  block_intersection.comp  closesthit.rchit  closesthit.rchit.spv  constants.h  direct_illum.comp  direct_illum.comp.spv  fragment.glsl  global_caches.h  global_uniforms.h  god_rays.comp  god_rays_reconstruct.comp  hyperparameters.comp  lightning.comp  miss.rmiss  miss.rmiss.spv  payloads.h  random.comp  ray.comp  ray_casting.comp  ray_tracer.glsl  raygen.rgen  raygen.rgen.spv  raytracer.comp  reconstruct.comp  reconstruct.comp.spv  reconstruct.rgen  reconstruct.rgen.spv  reproject.comp  reproject.comp.spv  rng.h  shading.h  shadowmiss.rmiss.spv  skybox.comp  test.comp  triangle_data.h  vertex.glsl
cubetracer/shaders/initial/: anyhit.rahit  anyhit.rahit.spv  closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  payload.h  raygen.rgen  raygen.rgen.spv
cubetracer/shaders/path_tracing/: diffuse.rgen  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  specular.rgen
cubetracer/shaders/raytracer/: main.comp
cubetracer/shaders/refract/: anyhit.rahit  closesthit.rchit  miss.rmiss  raygen.rgen  refract_anyhit.rahit
cubetracer/shaders/shadow/: anyhit.rahit  anyhit.rahit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
cubetracer/shaders/shadow_map/: closesthit.rchit  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
cubetracer/src/: atmosphere.rs  base.rs  cache_buffers.rs  camera.rs  config.rs  configurable_shader.rs  cubetracer.rs  cubetracerargs.rs  errors.rs  helper.rs  lib.rs  mesh.rs
cubetracer/src/barriers/: mod.rs
cubetracer/src/context/: mod.rs  shared.rs  surface.rs
cubetracer/src/datatypes/: acceleration_structure.rs  blas.rs  buffer.rs  buffer_list.rs  image.rs  mod.rs  texture.rs  tlas.rs  uniforms.rs
cubetracer/src/descriptors/: builder.rs  mod.rs
cubetracer/src/pipeline/: builder.rs  command_buffers.rs  compute.rs  mod.rs  raytracing.rs  shader.rs  update_factory.rs
cubetracer/src/window/: mod.rs  renderpass.rs  swapchain.rs
cubetracer_out/src/: camera.rs  helper.rs  lib.rs
data/: water.tga
perlin/: Cargo.toml
perlin/src/: lib.rs  perlin.rs
shader_preprocesser/: Cargo.toml
shader_preprocesser/src/: lib.rs
src/: biome_generator.rs  cli.yaml  config.rs  dump.rs  game.rs  main.rs  termidraw.rs
utils/: Cargo.toml
utils/src/: fpscounter.rs  framecounter.rs  lib.rs  wininput.rs
world/: Cargo.toml
world/src/: aabb.rs  biome.rs  block.rs  block_config.rs  block_data.yaml  block_renderer.rs  chunk.rs  chunk_lightning.rs  chunk_manager.rs  chunk_mesh.rs  lib.rs  player.rs  world.rs
world/src/generator/: column.rs  generator.rs  mod.rs  simple_random.rs
world/src/generator/decorators/: mod.rs  multi.rs  plant_group.rs  tower_plant.rs  tree.rs
world/src/generator/layers/: biome.rs  cleaner.rs  island.rs  mod.rs  remove_too_much_oceans.rs  river.rs  smooth.rs  zoom.rs  zoom_voronoi.rs
