[package]
name = "glopr"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubetracer = { path = "cubetracer" }
world = { path = "world" }
perlin = { path = "perlin" }

# Math
nalgebra = ""

# Rendering
gl = "*"
glutin = "0.24.0"
