[package]
name = "cubetracer"
version = "0.1.0"
authors = ["Issaadi Sami <samiisd@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }

# Rendering
gl = "*"
glutin = "0.24.0"

# Math
nalgebra = "*"

image = ""
rand = ""

shader_preprocesser = { path = "../shader_preprocesser" }
