[package]
name = "cubetracer"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

world = { path = "../world" }

log = "0.4"
env_logger = "0.6"
ash = "0.31.0"
winit = "0.24.0"
tobj = "0.1.10"

nalgebra = "0.21.0"
image = "0.23.12"
