[package]
name = "world"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = ""
rand = ""
dashmap = "3.10.0"
lazy_static = "1.4.0"

perlin = { path = "../perlin" }
